# Swift

./: README.md  Readme.md  compile.sh
DataProcess/CMA-compare/: cma_compare.py  results_cmaVSnonCma.txt  results_cmaVSnonCma_128.txt  speedup.py
DataProcess/FP32/: result_ASpT_spmm_f32_n128.txt  result_ASpT_spmm_f32_n32.txt  result__spmm_f32_n128.txt  result__spmm_f32_n32.txt  results_spmm_f32_128.txt  results_spmm_f32_32.txt  scatterplot_128.py  scatterplot_32.py
DataProcess/FP64/: result_ASpT_spmm_f64_n128.txt  result_ASpT_spmm_f64_n32.txt  result__spmm_f64_n128.txt  result__spmm_f64_n32.txt  results_spmm_f64_128.txt  results_spmm_f64_32.txt  scatterplot_f64_128.py  scatterplot_f64_32.py
DataProcess/idealCMA/: ideal-cma-128.txt  ideal-cma.txt  idealCMA.py  speedup.py
DataProcess/irr_opt/: hisgram.py  results_optVSnonOpt.txt  results_optVSnonOpt_128.txt
DataProcess/irr_regular_ratio/: draw.py  mtxclassification.txt
DataProcess/preprocess/: SOTA_method_preprocess.txt  block_sort.py  preprocess.txt  time_compare.py
MTX_samples/: c-48.mtx
script/: Function_test.sh  Run_CMA_compare.sh  Run_FP32.sh  Run_FP64.sh  Run_SOTA_method.sh  Run_idealCMA.sh  Run_irr_opt.sh  Run_irr_regular_ratio.sh  Run_preprocess.sh  ncu.sh
src/: CMakeLists.txt  Swift.h  Swift_gpu_col_major.h  Swift_gpu_row_major.h  auxiliary.h  benchmark.sh  eval_spmm.sh  main.cu  ncu.sh  test
src/data/: results_spmm_32.txt
